--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.codencare.oot.samples</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>samples-oot</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
     <name>Parent project</name>
