nama pom diganti

--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.codencare.oot.samples</groupId>
-    <artifactId>samples-oot</artifactId>
+    <artifactId>parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
-    <name>Parent project</name>
+    <name>Object Oriented Technique Samples</name>
 
     <modules>
         <module>inherintance-satu</module>
